--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -16,4 +16,43 @@ body {
 section {
   height: 100vh;
 }
+
+h2 {
+  font-family: 'Playfair Display', serif;
+}
+
+nav {
+  font-weight: 500;
+}
+
+.bg-light {
+  background-color: #FFFFFF;
+}
+
+#particles-js {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: -1;
+}
+
+#landing-container {
+  height: 75%;
+}
+
+.landing-text > h1, .landing-text > h3 {
+  font-weight: 800;
+}
+
+.landing-text > h1 {
+  text-transform: uppercase;
+  font-size: 6rem;
+}
+
+footer {
+  width: 100%;
+  background-color: #787878;
+}
 /*# sourceMappingURL=styles.css.map */
