--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -20,9 +20,65 @@ html {
 
 body {
     font-family: 'Montserrat', sans-serif;
-    // font-family: 'Playfair Display', serif;
 }
 
 section {
     height: 100vh;
+}
+
+h2 {
+    font-family: 'Playfair Display', serif;
+}
+
+nav {
+    font-weight: 500;
+}
+
+.bg-light {
+    background-color: #FFFFFF;
+}
+
+#particles-js {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    z-index: -1;
+}
+
+#landing-container {
+    height: 75%;
+}
+
+.landing-text > h1, .landing-text > h3 {
+    font-weight: 800;
+}
+
+.landing-text > h1 {
+    text-transform: uppercase;
+    font-size: 6rem;
+}
+
+footer {
+    width: 100%;
+    background-color: $gray;
+}
+
+// MEDIA QUERIES
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+  
+}
+
+// Large devices (desktops, 992px and up)
+
+@media (min-width: 992px) {
+  
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+
 }
