--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -51,17 +51,19 @@ nav {
     height: 75%;
 }
 
-.landing-text > h1, .landing-text > h3 {
+.landing-text > h3 {
     font-weight: 800;
+    font-size: 2rem;
 }
 
 .landing-text > h1 {
+    font-weight: 800;
     text-transform: uppercase;
     font-size: 6rem;
 }
 
 footer {
-    width: 100%;
+    height: 10%;
     background-color: $gray;
 }
 
