--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -25,8 +25,10 @@ nav {
   font-weight: 500;
 }
 
-.bg-light {
-  background-color: #FFFFFF;
+.navbar.scrolled {
+  background-color: #fff !important;
+  -webkit-transition: background-color 200ms linear;
+  transition: background-color 200ms linear;
 }
 
 #particles-js {
@@ -44,17 +46,44 @@ nav {
 
 .landing-text > h3 {
   font-weight: 800;
-  font-size: 2rem;
+  font-size: 1.5rem;
 }
 
 .landing-text > h1 {
   font-weight: 800;
   text-transform: uppercase;
-  font-size: 6rem;
+  font-size: 2rem;
 }
 
 footer {
   height: 10%;
   background-color: #787878;
+}
+
+@media (min-width: 768px) {
+  .landing-text > h3 {
+    font-size: 2rem;
+  }
+  .landing-text > h1 {
+    font-size: 4rem;
+  }
+}
+
+@media (min-width: 992px) {
+  .landing-text > h3 {
+    font-size: 2rem;
+  }
+  .landing-text > h1 {
+    font-size: 5rem;
+  }
+}
+
+@media (min-width: 1200px) {
+  .landing-text > h3 {
+    font-size: 2rem;
+  }
+  .landing-text > h1 {
+    font-size: 6rem;
+  }
 }
 /*# sourceMappingURL=styles.css.map */
