updated projects grid to have opacity and better spacing

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -10,7 +10,7 @@ $gray: #787878;
 
 * {
     margin: 0;
-    padding: 0;
+    padding: 10;
     box-sizing: border-box;
 }
 
@@ -103,3 +103,25 @@ footer {
         font-size: 6rem;
     }
 }
+
+.container {
+    background: black;
+    display: inline-block;
+    border: 5px solid black;
+  }
+  .grid {
+    display: grid;
+    grid-template-columns: repeat(3, 80px);
+    grid-template-rows: repeat(3, 80px);
+    grid-gap: 5px;
+  }
+  .cell {
+     /* center the cell content */
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    font-family: Arial;
+    font-size: 3rem;
+    font-weight: bold;
+    background: white;
+  }
