--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -62,11 +62,22 @@ nav {
     font-weight: 800;
     text-transform: uppercase;
     font-size: 2rem;
+    // border-bottom: 10px solid $blue;
 }
 
 footer {
     height: 10%;
     background-color: $gray;
+}
+
+// PROJECT PAGE
+
+.article > a, .article > a:hover {
+    text-decoration: none;
+    color: black;
+}
+.article > h1 {
+    font-weight: 700;
 }
 
 // MEDIA QUERIES
