--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 0;
+  padding: 10;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -18,7 +18,8 @@ section {
 }
 
 h2 {
-  font-family: 'Playfair Display', serif;
+  font-weight: 700;
+  font-style: italic;
 }
 
 nav {
@@ -55,9 +56,20 @@ nav {
   font-size: 2rem;
 }
 
-footer {
-  height: 10%;
-  background-color: #787878;
+#about, #projects, #contact {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+#about > h2, #projects {
+  text-align: center;
 }
 
 .article > a, .article > a:hover {
@@ -67,6 +79,11 @@ footer {
 
 .article > h1 {
   font-weight: 700;
+}
+
+footer {
+  height: 10%;
+  background-color: #787878;
 }
 
 @media (min-width: 768px) {
@@ -97,17 +114,22 @@ footer {
 }
 
 .row {
-  display: -ms-flexbox; /* IE10 */
+  display: -ms-flexbox;
+  /* IE10 */
+  display: -webkit-box;
   display: flex;
-  -ms-flex-wrap: wrap; /* IE10 */
+  -ms-flex-wrap: wrap;
+  /* IE10 */
   flex-wrap: wrap;
   padding: 10 10px;
 }
 
 /* Create four equal columns that sits next to each other */
 .column {
-  -ms-flex: 25%; /* IE10 */
-  flex: 25%;
+  -ms-flex: 25%;
+  /* IE10 */
+  -webkit-box-flex: 25%;
+          flex: 25%;
   max-width: 25%;
   padding: 0 10px;
 }
@@ -121,5 +143,4 @@ footer {
 img:hover {
   opacity: .5;
 }
-
 /*# sourceMappingURL=styles.css.map */
