--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,6 +1,6 @@
 * {
   margin: 0;
-  padding: 0;
+  padding: 10;
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
@@ -12,6 +12,7 @@ html {
 body {
   font-family: 'Montserrat', sans-serif;
 }
+
 
 section {
   height: 100vh;
@@ -57,18 +58,21 @@ nav {
 }
 
 #landing-container {
+  background-image: url('../img/stringtheorymoodboard-03 2.svg');
   height: 75%;
 }
 
 .landing-text > h3 {
   font-weight: 800;
   font-size: 1.5rem;
+  background-color: white;
 }
 
 .landing-text > h1 {
   font-weight: 800;
   text-transform: uppercase;
   font-size: 2rem;
+  background-color: white;
 }
 
 #about, #projects, #contact {
@@ -248,16 +252,39 @@ footer {
   -webkit-box-flex: 25%;
           flex: 25%;
   max-width: 25%;
-  padding: 0 10px;
+  padding: 10 10px;
 }
 
 .column img {
   margin-top: 20px;
   vertical-align: middle;
+  margin-left: auto;
+  margin-right: auto;
   width: 100%;
+  padding: 10 10px;
+  padding-bottom: 10px;
 }
 
 img:hover {
   opacity: .5;
 }
+
+.grid-container {
+  display: grid;
+  grid-template-columns: auto auto auto auto auto;
+  grid-gap: 10px;
+  padding: 10px;
+}
+
+.grid-container > div {
+  text-align: center;
+  padding: 20px 0;
+  font-size: 30px;
+}
+
+.item1 {
+  grid-row-start: 1;
+  grid-row-end: 3;
+}
+
 /*# sourceMappingURL=styles.css.map */
