--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -334,7 +334,7 @@ footer {
     position: absolute;
     z-index: 1;
     top: 0;
-    bottom: 0;
+    left: 0;
   }
 
  .grayscale {
@@ -342,7 +342,7 @@ footer {
     z-index: 0;
     -webkit-filter: grayscale(100%);
     top: 0;
-    bottom: 0;
+    left: 0;
   }
 
   .clip {
@@ -364,4 +364,7 @@ footer {
     text-align: center;
     padding: 20px 0;
     font-size: 30px;
+  }
+
+  #myClip {
   }
