--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -106,6 +106,12 @@ nav {
     // border-bottom: 10px solid $blue;
 }
 
+.contact-txt > h2 {
+    font-weight: 800;
+    font-size: 10px;
+    background-color: white;
+  }
+
 #about, #projects, #contact {
     display: flex;
     justify-content: center;
@@ -284,6 +290,8 @@ footer {
     -ms-flex-wrap: wrap; /* IE10 */
     flex-wrap: wrap;
     padding: 10 10px;
+    padding-bottom: 30px;
+    
   }
   
   /* Create four equal columns that sits next to each other */
@@ -365,6 +373,43 @@ footer {
     text-align: center;
     padding: 20px 0;
     font-size: 30px;
+  }
+
+  //PROJECTS PAGE
+  #overview {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  
+  .overview-container {
+    padding-top: 4vh;
+    padding-right: 10vw;
+    padding-left: 10vw;
+  }
+
+  .overview-container > p {
+      font-size: 14px;
+  }
+
+  .project-overview-container {
+    border-top-style: solid;
+    border-top-width: 0.5px;
+    border-top-color: gray;
+    border-bottom-style: solid;
+    border-bottom-width: 0.5px;
+    border-bottom-color: gray;
+    font-style: italic;
+  }
+
+  .project-content-container {
+    border-bottom-style: solid;
+    border-bottom-width: 0.5px;
+    border-bottom-color: gray;
+    font-style: italic;
   }
 
   #myClip {
