--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -67,14 +67,17 @@ nav {
 .landing-text > h3 {
   font-weight: 800;
   font-size: 1.5rem;
-  background-color: white;
 }
 
 .landing-text > h1 {
   font-weight: 800;
   text-transform: uppercase;
   font-size: 2rem;
-  background-color: white;
+}
+
+.landing-text-bkd {
+  background: #FFFFFF;
+  padding: 0 0.75rem;
 }
 
 #about, #projects, #contact {
@@ -112,9 +115,9 @@ h5 {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-box-pack: center;
-      -ms-flex-pack: center;
-          justify-content: center;
+  -webkit-box-pack: top;
+      -ms-flex-pack: top;
+          justify-content: top;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
