--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -8,3 +8,38 @@ $gray: #787878;
 $black: #202020;
 
 
+h3 {
+    text-align: center;
+}
+
+.project-content-container img {
+    width: 100%;
+}
+
+.logo-container {
+    display: flex;
+    justify-content: center;
+}
+
+#groupsource-logo {
+    width: 50%;
+}
+
+// #team-header {
+//     position: relative;
+//     padding: 0 .5em;
+//     &:after {
+//       content: "";
+//       position: absolute;
+//       bottom: 0;
+//       left: 0;
+//       width: 100%;
+//       height: 35%;
+//       background-color: $red;
+//       opacity: 0.6;
+//       z-index: -10;
+//       -webkit-transition: all .1s linear;
+//       -moz-transition: all .1s linear;
+//       transition: all .1s linear;
+//     }
+//   }
