added groupsource icons, not perfect

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -18,4 +18,9 @@ h3 {
 #groupsource-logo {
   width: 50%;
 }
+
+.team-container p {
+  font-size: 10px;
+  margin-bottom: 0;
+}
 /*# sourceMappingURL=projects.css.map */
