--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -25,6 +25,30 @@ h3 {
     width: 50%;
 }
 
+// .team-container {
+//     display: flex;
+//     flex-direction: row;
+//     justify-content: space-between;
+// }
+
+// .team-container img {
+//     width: 80px;
+//     height: auto;
+//     margin-bottom: 10px;
+// }
+
+.team-container p {
+    // font-style: italic;
+    font-size: 10px;
+    margin-bottom: 0;
+}
+
+// .member {
+//     display: flex;
+//     flex-direction: column;
+//     align-items: center;
+// }
+
 // #team-header {
 //     position: relative;
 //     padding: 0 .5em;
