--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -23,4 +23,8 @@ h3 {
   font-size: 10px;
   margin-bottom: 0;
 }
+
+.team-container p:nth-of-type(1) {
+  font-size: 12px;
+}
 /*# sourceMappingURL=projects.css.map */
