--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -43,6 +43,10 @@ h3 {
     margin-bottom: 0;
 }
 
+.team-container p:nth-of-type(1) {
+    font-size: 12px;
+}
+
 // .member {
 //     display: flex;
 //     flex-direction: column;
