added underlines and up to background for makerspace

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -426,4 +426,13 @@ footer {
   border-bottom-color: gray;
   font-style: italic;
 }
+
+.figcaption {
+  font-size: 40px;
+  font-style: italic;
+}
+
+u {
+  text-decoration: none;
+}
 /*# sourceMappingURL=styles.css.map */
