--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -432,5 +432,14 @@ footer {
     font-style: italic;
   }
 
+  .figcaption {
+      font-size: 40px;
+      font-style: italic;
+  }
+
+  u {
+    text-decoration: none;
+  }
+
   #myClip {
   }
