finished bsfc, made it responsive

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -274,6 +274,11 @@ footer {
 
 // MEDIA QUERIES
 
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { 
+
+}
+
 // Medium devices (tablets, 768px and up)
 @media (min-width: 768px) {
     .landing-text > h3 {
