--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -2,8 +2,75 @@ h3 {
   text-align: center;
 }
 
+h4 {
+  font-size: 1.25rem;
+}
+
 .project-content-container img {
   width: 100%;
+}
+
+.team-container > .row {
+  padding-bottom: 1em;
+}
+
+.team-container p {
+  font-size: 0.6rem;
+  margin-bottom: 0;
+}
+
+.team-container p:nth-of-type(1) {
+  font-size: 0.75rem;
+}
+
+.team-container img {
+  width: 100%;
+}
+
+.center-img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.smaller-img {
+  width: 50% !important;
+}
+
+ol, ul {
+  padding-left: 1em;
+}
+
+.red-ul {
+  position: relative;
+  padding: 0 .5em;
+}
+
+.red-ul:after {
+  content: "";
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 35%;
+  background-color: #E06B65;
+  opacity: 0.6;
+  z-index: -10;
+  -webkit-transition: all .1s linear;
+  transition: all .1s linear;
+}
+
+footer {
+  background-color: #ffffff;
+  height: 6vh;
+}
+
+.project-overview-container p {
+  font-size: 0.6rem;
+}
+
+.project-overview-container .project {
+  font-size: 0.75rem;
 }
 
 .logo-container {
@@ -19,12 +86,26 @@ h3 {
   width: 50%;
 }
 
-.team-container p {
-  font-size: 10px;
-  margin-bottom: 0;
+.bsfc-img {
+  padding-bottom: 2em;
 }
 
-.team-container p:nth-of-type(1) {
-  font-size: 12px;
+ol > ul {
+  list-style: disc;
+}
+
+@media (min-width: 768px) {
+  .team-container p {
+    font-size: 0.75rem;
+  }
+  .team-container p:nth-of-type(1) {
+    font-size: 0.85rem;
+  }
+  .project-overview-container p {
+    font-size: 1rem;
+  }
+  .project-overview-container .project {
+    font-size: 1rem;
+  }
 }
 /*# sourceMappingURL=projects.css.map */
