--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -12,9 +12,80 @@ h3 {
     text-align: center;
 }
 
+h4 {
+    font-size: 1.25rem;
+}
+
 .project-content-container img {
     width: 100%;
 }
+
+.team-container > .row {
+    padding-bottom: 1em;
+}
+
+.team-container p {
+    // font-style: italic;
+    font-size: 0.6rem;
+    margin-bottom: 0;
+}
+
+.team-container p:nth-of-type(1) {
+    font-size: 0.75rem;
+}
+
+.team-container img {
+    width: 100%;
+}
+
+.center-img {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
+
+.smaller-img {
+    width: 50%!important;
+}
+
+ol, ul {
+    padding-left: 1em;
+}
+
+// Base code for title underlines; would have to tweak for each title
+.red-ul {
+    position: relative;
+    padding: 0 .5em;
+    &:after {
+      content: "";
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 35%;
+      background-color: $red;
+      opacity: 0.6;
+      z-index: -10;
+      -webkit-transition: all .1s linear;
+      -moz-transition: all .1s linear;
+      transition: all .1s linear;
+    }
+  }
+
+footer {
+    background-color: #ffffff;
+    height: 6vh;
+}
+
+.project-overview-container p {
+    font-size: 0.6rem;
+}
+
+.project-overview-container .project {
+    font-size: 0.75rem;
+}
+
+// GROUPSOURCE
 
 .logo-container {
     display: flex;
@@ -25,49 +96,46 @@ h3 {
     width: 50%;
 }
 
-// .team-container {
-//     display: flex;
-//     flex-direction: row;
-//     justify-content: space-between;
-// }
+// BSFC
 
-// .team-container img {
-//     width: 80px;
-//     height: auto;
-//     margin-bottom: 10px;
-// }
-
-.team-container p {
-    // font-style: italic;
-    font-size: 10px;
-    margin-bottom: 0;
+.bsfc-img {
+    padding-bottom: 2em;
 }
 
-.team-container p:nth-of-type(1) {
-    font-size: 12px;
+ol > ul {
+    list-style: disc;
 }
 
-// .member {
-//     display: flex;
-//     flex-direction: column;
-//     align-items: center;
-// }
+// Small devices (landscape phones, 576px and up)
+@media (min-width: 576px) { 
 
-// #team-header {
-//     position: relative;
-//     padding: 0 .5em;
-//     &:after {
-//       content: "";
-//       position: absolute;
-//       bottom: 0;
-//       left: 0;
-//       width: 100%;
-//       height: 35%;
-//       background-color: $red;
-//       opacity: 0.6;
-//       z-index: -10;
-//       -webkit-transition: all .1s linear;
-//       -moz-transition: all .1s linear;
-//       transition: all .1s linear;
-//     }
-//   }
+}
+
+// Medium devices (tablets, 768px and up)
+@media (min-width: 768px) {
+    .team-container p {
+        font-size: 0.75rem;
+    }
+    
+    .team-container p:nth-of-type(1) {
+        font-size: 0.85rem;
+    }
+
+    .project-overview-container p {
+        font-size: 1rem;
+    }
+    
+    .project-overview-container .project {
+        font-size: 1rem;
+    }
+}
+
+// Large devices (desktops, 992px and up)
+@media (min-width: 992px) {
+    
+}
+
+// Extra large devices (large desktops, 1200px and up)
+@media (min-width: 1200px) {
+    
+}
