finished groupsource. made pg responsive except team icons

--- a/assets/css/projects.css
+++ b/assets/css/projects.css
@@ -8,6 +8,7 @@ h4 {
 
 .project-content-container img {
   width: 100%;
+  padding-bottom: 1.5em;
 }
 
 .team-container > .row {
@@ -25,6 +26,7 @@ h4 {
 
 .team-container img {
   width: 100%;
+  padding-bottom: 0;
 }
 
 .center-img {
@@ -33,12 +35,24 @@ h4 {
   margin-right: auto;
 }
 
-.smaller-img {
+.xs-img {
+  width: 25% !important;
+}
+
+.sm-img {
   width: 50% !important;
+}
+
+.md-img {
+  width: 75% !important;
 }
 
 ol, ul {
   padding-left: 1em;
+}
+
+iframe {
+  width: 100%;
 }
 
 .red-ul {
@@ -73,6 +87,12 @@ footer {
   font-size: 0.75rem;
 }
 
+figcaption {
+  color: #545454;
+  text-align: center;
+  font-size: 0.8rem;
+}
+
 .logo-container {
   display: -webkit-box;
   display: -ms-flexbox;
@@ -83,7 +103,15 @@ footer {
 }
 
 #groupsource-logo {
-  width: 50%;
+  width: 80vw;
+}
+
+.img-group img:not(:last-child) {
+  padding-bottom: 0;
+}
+
+#xls-embed {
+  height: 30vh;
 }
 
 .bsfc-img {
@@ -106,6 +134,15 @@ ol > ul {
   }
   .project-overview-container .project {
     font-size: 1rem;
+  }
+  #groupsource-logo {
+    width: 50vw;
+  }
+}
+
+@media (min-width: 992px) {
+  #groupsource-logo {
+    width: 40vw;
   }
 }
 /*# sourceMappingURL=projects.css.map */
