alemany farm is done

--- a/assets/css/projects.scss
+++ b/assets/css/projects.scss
@@ -25,6 +25,10 @@ h3 {
     width: 50%;
 }
 
+#netic-logo {
+    width: 50%;
+}
+
 // .team-container {
 //     display: flex;
 //     flex-direction: row;
