pizza w purpose up to community engagement

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -435,4 +435,16 @@ footer {
 u {
   text-decoration: none;
 }
+
+.project-nav-yellow:hover {
+  background-color: #FFFF99;
+}
+
+.project-nav-green:hover {
+  background-color: #99CC99;
+}
+
+.project-nav-blue:hover {
+  background-color: #99CCFF;
+}
 /*# sourceMappingURL=styles.css.map */
