--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -446,5 +446,15 @@ footer {
     text-decoration: none;
   }
 
+  .project-nav-yellow:hover {
+    background-color: #FFFF99;
+  }
+  .project-nav-green:hover {
+    background-color: #99CC99;
+  }
+  .project-nav-blue:hover {
+    background-color: #99CCFF;
+  }
+
   #myClip {
   }
