small style changes on bsfc

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -353,10 +353,10 @@ footer {
   
   #art-container svg {
     position: absolute;
-    height: 100%;
-    width: 93%;
-    top: 60px;
-    left: 78px;
+    // height: 100%;
+    width: 100%;
+    top: 0;
+    left: 0;
     // opacity: 0;
     z-index: 2;
   }
