--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -342,10 +342,9 @@ footer {
 
 #art-container svg {
   position: absolute;
-  height: 100%;
-  width: 93%;
-  top: 60px;
-  left: 78px;
+  width: 100%;
+  top: 0;
+  left: 0;
   z-index: 2;
 }
 
