--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -13,8 +13,12 @@ body {
   font-family: 'Montserrat', sans-serif;
 }
 
-section {
+#landing, #contact, #projects {
   height: 100vh;
+}
+
+#about, #members {
+  height: auto;
 }
 
 h2 {
@@ -96,6 +100,10 @@ nav {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+#about {
+  padding: 6.5em 0;
 }
 
 #about > h2, #projects {
