added names and descriptors

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -183,6 +183,10 @@ h5 {
   margin-bottom: 0.25rem;
 }
 
+.label > span {
+  font-style: italic;
+}
+
 #contact {
   position: relative;
   text-align: center;
