--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -221,6 +221,25 @@ h5 {
   z-index: 2;
 }
 
+.proj-title {
+  position: absolute;
+  top: 90%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
+.col-6 col-sm {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
+.col-6 {
+  position: relative;
+  text-align: center;
+  color: white;
+}
+
 .colored {
   position: absolute;
   z-index: 1;
