--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -159,7 +159,7 @@ h5 {
     justify-content: top;
     align-items: center;
     position: relative;
-    // height: 100%;
+    height: 100vh;
 }
 
 .labels {
@@ -191,6 +191,8 @@ h5 {
 
 .label {
     margin-bottom: 0.25rem;
+    // background: linear-gradient(180deg, #ffffff 65%, #ffffff 65%);
+    // display: inline;
 }
 
 .label > span {
@@ -206,7 +208,6 @@ h5 {
     display: inline-block; /* <= shrinks container to image size */
     transition: transform 150ms ease-in-out;
     top: 0;
-    left: 0;
   }
   
   #art-container img { /* <= optional, for responsiveness */
@@ -592,7 +593,4 @@ footer {
   }
   .project-nav-blue:hover {
     background-color: #99CCFF;
-  }
-
-  #myClip {
   }
