fixed spacing on prng on project grid (resp fix)

--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -349,6 +349,10 @@ h5 {
     color: $blue;
 }
 
+div.col-6.col-sm-4 {
+    padding-top: 20;
+}
+
 // FOOTER 
 footer {
     height: 10%;
@@ -359,7 +363,9 @@ footer {
 
 // Small devices (landscape phones, 576px and up)
 @media (min-width: 576px) { 
-
+    #col-sm-4{
+        padding-top: 20;
+    }
 }
 
 // Medium devices (tablets, 768px and up)
@@ -522,6 +528,7 @@ footer {
   .project-tile:hover {
     opacity: .5;
   }
+
 
   .grid-container {
     display: -ms-grid;
