--- a/assets/css/styles.scss
+++ b/assets/css/styles.scss
@@ -128,10 +128,12 @@ nav {
 
 #about {
     padding: 6.5em 0;
+    flex-direction: column;
 }
 
 #about > h2, #projects {
     text-align: center;
+    flex-direction: column;
 }
 
 // PROJECT PAGE
